# SfD

./: .gitignore  README.md  exp_runner.py  requirements.txt
configs/: base.yaml  config.py  debug.yaml  default.yaml
data/airplane/: non_empty_indexes.txt  object_pred_pose.json  object_scale_matrix.json  transforms_test.json  transforms_train.json
datasets/: data_info.py  neus_dataset.py
envmaps/: fit_envmap_with_sg.py
model/: duplicate.py  embedder.py  geometry_hash.py  geometry_mlp.py  geometry_triplane.py  loss.py  material_sg.py  pose.py  proxycolor.py  visibility.py
preprocess/: 0_mask_and_crop.py  1_match_pairs.py  2_filter_pairs.py  3_optimize_global_rotation.py  4_match_pairs_final.py  5_sfm.py  6_extract_sfm_point_cloud.py  7_extract_sfm_pose_and_visualize.py  8_extract_monocular_cues.py  run.py
preprocess/keypoint_matching/: matching.py  utils.py
preprocess/sfm_scripts/: README.md  custom_video_extract.sh  download_video.sh  dump_orb_slam_config.py  dump_poses.py  edit_patch_match.py  extract_image_frames.py  extract_snippet.py  file_utils.py  gen_colmap_images.py  gen_colmap_input.py  gen_colmap_input_reality.py  geo_utils.py  run_colmap.sh  run_orbslam.sh  scrap.py
preprocess/sfm_scripts/baselines/pyceres/: CMakeLists.txt  __init__.py  bundle_adjustment.cc  hello_world.cc  lie_algebra.h
trainer/: train_geometry.py  train_material.py  train_visibility.py
utils/: distributed.py  evaluate.py  general.py  metrics.py  plots.py  point_cloud.py  pose_transform.py  pytorch3d.py  rend_util.py  rotation_conversions.py  temcolor.py
(+53 files in other folders)
